@@ -1,2 +1,9 @@
-# CPSC233W22Demo1
+#CPSCFINALPRJECTW22
+
+This code is meant to run like first world is created then it is expected that the user enters the player details(batsman or bowler)like the
+name,age,experience,position,runs for the batsman,same is for bowler the user needs to enter name,age,experience,position,wickets.
+At each step exception handling is done if user tries to misuse the code and there are features are like add player to a team,sort the players on basis of runs and wickets, display player details, display top batsman,top runs, top wicket taker, top wickets and also the ability to save to the file and load the players from the file
+
+The path reference to run the jar File on Mac
+java --module-path "/Users/namitaneja/Downloads/javafx-sdk-18/lib" --add-modules javafx.controls,javafx.fxml -jar "/Users/namitaneja/Desktop/n/out/artifacts/CPSCFINAL/CPSCFINAL.jar"
 
